# fsw-wasm-rust

./: Cargo.toml  index.css  index.html  index.js  sensitiveWords.js
sensitive_words/: 政治类.txt
src/: lib.rs
tests/: integration_tests.rs
